@@ -24,5 +24,5 @@
 int
 eventfd_read (int fd, eventfd_t *value)
 {
-  return read (fd, value, sizeof (eventfd_t)) != sizeof (eventfd_t) ? -1 : 0;
+  return __read (fd, value, sizeof (eventfd_t)) != sizeof (eventfd_t) ? -1 : 0;
 }
