@@ -1,3 +1,10 @@
+2007-10-08  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/eventfd_read.c (eventfd_read): Use
+	__read not read.
+	* sysdeps/unix/sysv/linux/eventfd_write.c (eventfd_write): Use
+	__write not write.
+
 2007-10-07  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #181]
